Disalignment produced by merge in some dropdowns solved. Delegated harvesting card style review done. Select contact color primary and more space. Filter selector correct letter size. Import URI modal greater bottom space.

--- a/src/components/TransactionList/TransactionListFilters/TransactionStatusFilter/TransactionStatusFilter.less
+++ b/src/components/TransactionList/TransactionListFilters/TransactionStatusFilter/TransactionStatusFilter.less
@@ -54,7 +54,7 @@
     top: calc(@smallerFont + 0.14rem);
     width: 100%;
     background: @grayLightest;
-    font-size: @minimumFont;
+    font-size: @smallFont;
     z-index: 1061 !important;
     padding: 0.14rem 0;
 
@@ -65,8 +65,8 @@
 
     &__divider {
         width: 100%;
-        height: 2px;
-        background: @grayDark;
+        height: 1px;
+        background: @grayLight;
         margin: 0.14rem 0 0.07rem 0;
     }
 }
