--- a/src/views/forms/FormPersistentDelegationRequestTransaction/FormPersistentDelegationRequestTransaction.less
+++ b/src/views/forms/FormPersistentDelegationRequestTransaction/FormPersistentDelegationRequestTransaction.less
@@ -3,6 +3,12 @@
 /deep/.form-row .auto-complete-size {
     width: 7rem;
     height: 100%;
+    margin-top: 0.125rem;
+    color: @primary;
+}
+
+/deep/ .ivu-icon {
+    margin-top: 0.125rem;
 }
 
 /deep/.form-row .form-row-inner-container {
@@ -10,18 +16,38 @@
     width: 100%;
     height: 100%;
     min-height: 0.45rem;
-    grid-template-columns: 1.4rem 7rem;
+    grid-template-columns: 2rem 7rem;
+
+    /deep/ .signer-selector-single-signer-container {
+        margin-top: 0.075rem;
+    }
+}
+
+/deep/ .ivu-input {
+    color: @primary;
+}
+
+/deep/ .ivu-select-dropdown {
+    background: @grayLightest;
+    .ivu-select-item:hover {
+        background-color: @white;
+    }
+}
+
+/deep/ .ivu-select-item-focus {
+    color: @primary;
 }
 
 .info-text {
     color: @purpleDark;
     font-size: @normalFont;
     font-family: @symbolFontLight;
-    margin-left: 5%;
+    margin-left: 0.7rem;
     margin-top: 5%;
     margin-right: 1rem;
     text-align: justify;
 }
+
 .harvesting-buttons-container {
     button {
         max-width: 2rem;
